// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container /> should adopt the "maxWidth" prop 1`] = `
.c0 {
  z-index: 10;
  -webkit-filter: none;
  filter: none;
}

@media (min-height:100%) {
  .c0 {
    -webkit-filter: drop-shadow(0 0 5px grey);
    filter: drop-shadow(0 0 5px grey);
  }
}

@media (min-width:100px) {
  .c0 {
    width: 100px;
  }
}

<div
  className="c0"
/>
`;

exports[`<Container /> should adopt the "showArrowBreakpoint" prop 1`] = `
.c0 {
  z-index: 10;
  -webkit-filter: none;
  filter: none;
}

@media (min-height:1rem) {
  .c0 {
    -webkit-filter: drop-shadow(0 0 5px grey);
    filter: drop-shadow(0 0 5px grey);
  }
}

@media (min-width:unset) {
  .c0 {
    width: unset;
  }
}

<div
  className="c0"
/>
`;

exports[`<Container /> should render and match the snapshot 1`] = `
.c0 {
  z-index: 10;
  -webkit-filter: none;
  filter: none;
}

@media (min-height:100%) {
  .c0 {
    -webkit-filter: drop-shadow(0 0 5px grey);
    filter: drop-shadow(0 0 5px grey);
  }
}

@media (min-width:unset) {
  .c0 {
    width: unset;
  }
}

<div
  className="c0"
/>
`;
